--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "test project",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --config webpack.config.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "webpack-cli": "^5.1.4"
   }
 }
